--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Homework Generator</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script>
     // Define an array of questions for each year and subject
     var questions = {
