--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Homework Generator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
     <script>
     // Define an array of questions for each year and subject
     var questions = {
