--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Homework Generator</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <h1>Homework Generator</h1>
-    <label for="yearSelect">Select a Year:</label>
-    <select id="yearSelect" onchange="updateHomework()">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-    </select>
-    <label for="subjectSelect">Select a Subject:</label>
-    <select id="subjectSelect" onchange="updateHomework()">
-      <option value="Math">Math</option>
-      <option value="Reading">Reading</option>
-    </select>
-    <div id="question"></div>
-    <div id="answer"></div>
-    <div id="story"></div>
-  </body>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>OWN</title>
+<link rel="icon" type="image/x-icon" href="logo.png">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<h2>Online Work Now</h2>
+
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for work.." title="Type in a subject">
+
+<ul id="myUL">
+  <li><a href="Similes.pdf">Simile and Metaphors</a></li>
+  <li><a href="index.html">More Soon...</a></li>
+</ul>
+
+<script src="script.js">
+</script>
+
+</body>
 </html>
